[project]
authors = [{ name = "Maximilian Roos", email = "m@maxroos.com" }]
dependencies = ["astor>=0.8.1", "pytest>=7"]
requires-python = ">=3.9, <4"
license = "Apache-2.0"
readme = "README.md"
version = "0.2.2"
name = "pytest-accept"
urls = { homepage = "https://github.com/max-sixty/pytest-accept", repository = "https://github.com/max-sixty/pytest-accept" }

[dependency-groups]
dev = ["blackdoc", "mypy", "pre-commit", "pytest-xdist>=3.8.0", "ruff"]

[project.entry-points.pytest11]
accept = "pytest_accept"

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers", "--doctest-modules"]
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS"
filterwarnings = ["error:::pytest_accept.*"]
pytester_example_dir = "examples"
testpaths = ["pytest_accept"]


[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pytest_accept"
module-root = ""

[tool.ruff]
fix = true

[tool.ruff.lint]
ignore = [
  "E402", # module level import at top — too strict in some cases
  "E501", # line too long - defer to formatter
  "E731", # No lambdas — too strict
]
select = [
  "F",   # Pyflakes
  "E",   # Pycodestyle
  "W",
  "TID", # flake8-tidy-imports (absolute imports)
  "I",   # isort
  "UP",  # Pyupgrade
]

[tool.mypy]
files = "."
# TODO: ideally we would list the modules that aren't yet typed
ignore_missing_imports = true
